# WebViewCpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  run_tests.bat  test_cdp.bat
docs/: API.md
include/: WebViewWrapper.h
include/binding/: CppObject.h
src/: ChatService.cpp  ChatService.h  ChatService.js  DownloadService.cpp  DownloadService.h  DownloadService.js  Subprocess.cpp  Subprocess.h  WebViewWrapper.cpp  demo.css  demo.html  demo.js  main.cpp  models.json
src/js/: chat.js  config.js  core.js  models.js  service-panel.js  ui.js
src/services/: ConfigService.h  FileService.h  MathService.h  WorkerService.h
tests/: run_tests.py  screenshot.py  test_cdp.py  test_cdp_image.py  test_download_e2e.py  test_launch.py
